change model of address (postcode from Int to String) fetching contacts is working and finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lydiatest.contactapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".di.ContactApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_love"
         android:label="@string/app_name"
@@ -12,7 +15,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
