--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,16 +36,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.fragment:fragment-ktx:1.2.5"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     //material
     implementation 'com.google.android.material:material:1.1.0'
-
-    // architecture components
-    implementation('androidx.lifecycle:lifecycle-viewmodel:2.2.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.6.1"
